# urbanrail

./: .gitignore  .gitmodules  Dockerfile  README.md  app.py  data.py  docker-compose.yaml  pyproject.toml  requirements.txt  schedule.json  updates.py
archive/: trains.json
static/: fonts.css  styles.css
static/root/: 404.html  robots.txt  sitemap.xml
static/root/news/: 404.html  bundle.min.js  index.html  index.xml  sitemap.xml  styles.2657172db9843494f703e11515291bd8c27ce4ee22d485ebcf1a625979093234.css  styles.c1caeebe2bca2dce8976c06be46250900991b688dee074e720e2884ab422b893.css  styles.css  styles.css.map
static/root/news/page/1/: index.html
static/root/news/page/2/: index.html
static/root/news/posts/: index.html  index.xml
templates/: index.html  list.html  station.html  train.html
templates/news/: README.md  config.toml
templates/news/assets/css/: font.scss  logo.scss  menu.scss  pagination.scss  variables.scss
templates/news/content/posts/: 0-day-zero.md  1-launch-highlights.md  10-baby-steps.md  11-a-few-observations.md  12-orange-goes-blue.md  13-cross-out-trains.md  14-long-long-trains.md  15-explanation-police.md  16-one-more-week.md  17-and-a-few-more.md  18-no-svyatoshyn.md  19-trains-are-back.md  2-dark-theme.md  3-big-big-update.md  4-api.md  5-big-analytics.md  6-warnings.md  7-whats-next.md  8-nice-things-first.md  8-temp-changes.md  9-trains.md
templates/news/layouts/partials/: extended_head.html  footer.html  head.html  menu.html
templates/partial/: analytics.html  feedback.html  links.html  microdata.html  updates.html
(+12 files in other folders)
