[project]
name = "urbanrail"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.115.14",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "python-slugify>=8.0.4",
    "pytz>=2025.2",
    "uvicorn>=0.35.0",
    "setuptools>=80.9.0",
    "python-multipart>=0.0.20",
    "pyjwt>=2.10.1",
    "passlib[bcrypt]>=1.7.4",
]
